# cpm-cli

./: CMakeLists.txt  README.md
cmake/: CTestCustom.cmake  add_cpm_test.cmake
src/: cmake.cpp  cmake.hpp  commands.hpp  context.cpp  context.hpp  cpm.cmake.cpp  cpm.cmake.hpp  cpm.cpp  cpm.hpp  project.cpp  project.hpp  registry.cpp  registry.hpp  repository.cpp  repository.hpp  target.cpp  target.hpp  utils.cpp  utils.hpp  version.cpp  version.hpp
src/commands/: add.cpp  add_package.cpp  build.cpp  configure.cpp  create.cpp
test/: CMakeLists.txt  create_existing_project.cmake  create_project.cmake
